# dwm_statusbar_build

./: Cargo.toml
src/: config.rs  main.rs
