[package]
name = "dwm_statusbar_build"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better_dwm_statusbar = { git = "https://github.com/realSuffix/better_dwm_statusbar"}
